// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextAreaInput /> > labelTitle > sets label 1`] = `
<div
  class="tw:form-control tw:w-full "
>
  <label
    class="tw:label tw:pb-1"
  >
    <span
      class="tw:block tw:text-sm tw:font-medium tw:text-base-content/50 tw:mb-1"
    >
      My Title
      :
    </span>
  </label>
  <textarea
    class="tw:textarea tw:textarea-bordered tw:w-full tw:leading-5 "
    placeholder=""
    required=""
  />
</div>
`;

exports[`<TextAreaInput /> > renders properly 1`] = `
<div
  class="tw:form-control tw:w-full "
>
  <textarea
    class="tw:textarea tw:textarea-bordered tw:w-full tw:leading-5 "
    placeholder=""
    required=""
  />
</div>
`;
